# bevy_demo

./: Cargo.toml  README.md  README_en.md
assets/data/: items.ron
doc/: arch_cn.md  cur_state.md  next_step.md
src/: main.rs
src/character/: components.rs  events.rs  mod.rs  systems.rs
src/core/: events.rs  mod.rs  resources.rs  states.rs
src/data/: loader.rs  mod.rs  schema.rs
src/equipment/: components.rs  events.rs  mod.rs  systems.rs
src/interface/: debug_cli.rs  mod.rs
src/inventory/: components.rs  events.rs  mod.rs  systems.rs
