[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.8"
once_cell = "1.21"
thiserror = "2.0.12"
uuid = { version = "1.17", features = ["v5"] }



